k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: weather-api
  name: weather-api
spec:
  ports:
    - name: 5000-tcp
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: weather-api
  sessionAffinity: None
  type: LoadBalancer
