k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: weather-api
  name: weather-api
spec:
  port:
    targetPort: 5000-tcp
  to:
    kind: Service
    name: weather-api
